<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_btn"
        android:icon="@drawable/action_bar_search_view_icon"
        android:title=""
        app:showAsAction="always"/>
    <item
        android:id="@+id/welcome_menu"
        android:icon="@drawable/action_bar_black_more_icon"
        android:title=""
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/add_buddy"
                android:title="@string/add_buddy"/>
            <item
                android:id="@+id/create_normal_team"
                android:title="@string/create_normal_team"/>
            <item
                android:id="@+id/create_regular_team"
                android:title="@string/create_advanced_team"/>
            <item
                android:id="@+id/search_advanced_team"
                android:title="@string/search_advanced_team"/>
            <item
                android:id="@+id/about"
                android:title="@string/settings"/>
        </menu>
    </item>
</menu>