<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/upload_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dip"
        android:paddingRight="30dip"
        android:layout_marginTop="100dip"
        android:orientation="horizontal">

        <Button
            android:id="@+id/upload_btn"
            android:layout_width="150dip"
            android:layout_height="wrap_content"
            android:background="@drawable/nim_message_button_bottom_send_selector"
            android:text="@string/upload_text"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/upload_status"
            android:layout_marginLeft="10dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/download_layout"
        android:layout_below="@id/upload_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dip"
        android:paddingRight="30dip"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/download_btn"
            android:layout_width="150dip"
            android:layout_height="wrap_content"
            android:text="@string/download_text"
            android:background="@drawable/nim_message_button_bottom_send_selector"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/download_status"
            android:layout_marginLeft="10dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

</RelativeLayout>