<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/start_session_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/account_info_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.netease.nim.uikit.common.ui.imageview.HeadImageView
                android:id="@+id/head_image"
                android:layout_width="50dip"
                android:layout_height="50dip"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dip"/>

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/empty"
                android:textColor="@color/color_red_ccfa3c55"
                android:textSize="21sp"/>

            <TextView
                android:id="@+id/session_step_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:text="@string/empty"
                android:textSize="18sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/callee_ack_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:gravity="bottom|center_horizontal"
            android:orientation="horizontal"
            android:paddingBottom="30dip">

            <Button
                android:id="@+id/accept"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/nim_message_button_bottom_send_selector"
                android:text="@string/accept_session"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/reject"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/g_red_long_btn_selector"
                android:text="@string/reject_session"
                android:textColor="@color/white"/>
        </LinearLayout>

        <Button
            android:id="@+id/end_session"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:background="@drawable/g_red_long_btn_selector"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:visibility="gone"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/session_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <RelativeLayout
            android:id="@+id/operate_layout"
            android:layout_width="match_parent"
            android:layout_height="60dip"
            android:layout_alignParentBottom="true"
            android:background="@color/grey">

            <Button
                android:id="@+id/doodle_back"
                android:layout_width="60dip"
                android:layout_height="40dip"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dip"
                android:background="@drawable/nim_message_button_bottom_send_selector"
                android:text="@string/doodle_back"
                android:textColor="@color/white"
                android:textSize="14sp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/operate_layout"
            android:background="@color/grey">

            <com.netease.nim.demo.rts.doodle.DoodleView
                android:id="@+id/doodle_view"
                android:layout_width="600px"
                android:layout_height="600px"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>


    </RelativeLayout>

</FrameLayout>