<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dip"
        android:paddingLeft="15dip"
        android:paddingRight="15dip"
        android:paddingTop="30dip">

        <com.netease.nim.uikit.common.ui.imageview.HeadImageView
            android:id="@+id/user_head_image"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:layout_alignParentLeft="true"
            android:layout_gravity="center_horizontal"
            android:scaleType="centerInside" />

        <TextView
            android:id="@+id/user_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/user_head_image"
            android:layout_marginLeft="20dip"
            android:layout_toRightOf="@id/user_head_image"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/user_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/user_nickname"
            android:layout_below="@id/user_nickname"
            android:layout_marginTop="7dip"
            android:textColor="@color/color_black_ff666666"
            android:textSize="15sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/toggle_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

    <LinearLayout
        android:id="@+id/operate_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingBottom="30dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="30dp">

        <Button
            android:id="@+id/begin_chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:background="@drawable/team_create_btn_selector"
            android:minHeight="50dp"
            android:text="@string/begin_chat"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_17"
            android:visibility="gone"/>

        <Button
            android:id="@+id/remove_buddy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dip"
            android:background="@drawable/nim_white_round_button_selector"
            android:minHeight="50dp"
            android:text="@string/remove_friend"
            android:textColor="@color/color_red_f04c62"
            android:textSize="@dimen/text_size_17"
            android:visibility="gone"/>

        <Button
            android:id="@+id/add_buddy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dip"
            android:background="@drawable/team_create_btn_selector"
            android:minHeight="50dp"
            android:text="@string/add_friend"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_17"
            android:visibility="gone" />
    </LinearLayout>
</LinearLayout>